# picube

./: .gitignore  CMakeLists.txt  README.md  TODO
include/: gif.h
shaders/: cube.frag  cube.vert
src/: main.cc
